# tp6-note-alois_lucas_djamael_eloi

./: CMakeLists.txt  Makefile  README.md  build_and_execute.sh
include/: Affichage.hpp  Case.hpp  Joueur.hpp  JoueurIA.hpp  Joueurhumain.hpp  Otrio.hpp  Pion.hpp  Plateau.hpp  case.h  case.hpp  joueur.hpp  joueurhumain.hpp  pion.hpp  plateau.hpp
src/: Case.cpp  Joueur.cpp  JoueurIA.cpp  Joueurhumain.cpp  Otrio.cpp  Pion.cpp  Plateau.cpp  affichage.cpp  case.cpp  joueur.cpp  joueurhumain.cpp  main.cpp  pion.cpp  plateau.cpp
